# GMP

./: .gitignore  CMakeLists.txt  GaussIntegralTableGenerator.cpp  GaussIntegralTableGenerator.h  GaussIntergalTableGenerator.h  GaussianPoint.cpp  GaussianPoint.h  Makefile  NewtonMethod.cpp  NewtonMethod.h  OrthogonalPolynomials.cpp  OrthogonalPolynomials.h  PruferTransformer.cpp  PruferTransformer.h  README.md  RungeKutta.cpp  RungeKutta.h  configure.sh  gmptools.cpp  gmptools.h  main.cpp  polynomial.cpp  polynomial.h  test_Gauss.cpp  test_Newton.cpp  test_OrthoPoly.cpp  test_Prufer.cpp  test_RungeKutta.cpp  test_gmp.cpp  test_polynomial.cpp
GaussPntDoc/Interval/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  5.txt  6.txt  7.txt  8.txt  (+1 more)
GaussPntDoc/Interval/Hermite/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+18 more)
GaussPntDoc/Interval/Lagueree/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+10 more)
GaussPntDoc/Interval/Legendre/: 10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+11 more)
doc/: dot_png.sh
test/: mycprog.c  mycxxprog.cpp  test_mpf.cpp  test_neg.cpp  test_path.cpp  test_typeid.cpp
